<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.uzumaki.saurabh.messcall.MainActivity">

    <TextView
        android:id="@+id/permissionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/checking_permissions"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/callSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:switchPadding="3dp"
        android:text="@string/reject_calls_auto"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/timeoutLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/callSwitch"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentTimeoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:text="Current Timeout"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeoutSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="time"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  second(s)" />
        </LinearLayout>

        <Button
            android:id="@+id/editTimeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeoutLayout"
            android:background="@android:color/transparent"
            android:text="Edit Timeout"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>


    <Switch
        android:id="@+id/smsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeoutLayout"
        android:padding="16dp"
        android:switchPadding="3dp"
        android:text="@string/send_sms_auto"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/smsSwitch"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingBottom="16dp"
        android:text="@string/message_to_be_sent"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/permissionText"
        android:layout_below="@id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messageContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="Message content"
                android:textSize="16sp" />

            <Button
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/edit"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
